# Hufu-FedJoin-Benchmark

./: .gitignore  .gitmodules  README.md
Algorithms/: CMakeLists.txt  README.md  bitonic_sort.h  fast_join.cpp  fast_join.h  hash_join.cpp  hash_join.h  join.cpp  murmur_hash3.cpp  murmur_hash3.h  nest_loop_join.cpp  nest_loop_join.h  obliv_join.cpp  obliv_join.h  obliv_permutation.cpp  obliv_permutation.h  obliv_stack.h  sort_merge_join.cpp  sort_merge_join.h  test.cpp  utils.cpp  utils.h
Data/JS/FK-FK/: js-0.025-1.txt  js-0.025-2.txt  js-0.125-1.txt  js-0.125-2.txt  js-0.25-1.txt  js-0.25-2.txt  js-1.25-1.txt  js-1.25-2.txt
Data/JS/PK-FK/: js-0.0125-2.txt  js-0.025-1.txt  js-0.025-2.txt  js-0.05-2.txt  js-0.1-2.txt
Data/JS/PK-PK/: js-0.0125-1.txt  js-0.0125-2.txt  js-0.025-2.txt  js-0.05-2.txt
Data/Multi/: multi-high-100-1.txt  multi-high-100-2.txt  multi-high-100-3.txt  multi-high-200-1.txt  multi-high-200-2.txt  multi-high-200-3.txt  multi-high-50-1.txt  multi-high-50-2.txt  multi-high-50-3.txt  multi-high-500-1.txt  multi-high-500-2.txt  multi-high-500-3.txt  multi-low-100-1.txt  multi-low-100-2.txt  multi-low-100-3.txt  multi-low-200-1.txt  multi-low-200-2.txt  multi-low-200-3.txt  multi-low-50-1.txt  multi-low-50-2.txt  multi-low-50-3.txt  multi-low-500-1.txt  multi-low-500-2.txt  multi-low-500-3.txt
Data/Real/FK-FK/jokes/: r1.txt  r2.txt
Data/Skew/: zipf-0.1-1.txt  zipf-0.1-2.txt  zipf-0.3-1.txt  zipf-0.3-2.txt  zipf-0.5-1.txt  zipf-0.5-2.txt  zipf-0.7-1.txt  zipf-0.7-2.txt  zipf-0.9-1.txt  zipf-0.9-2.txt
Data/TPCH/: part.txt  partsupp.txt
(+10 files in other folders)
